Models és HTML-ek kiegészítve

--- a/app/templates/app/osztaly_bejegyzesek.html
+++ b/app/templates/app/osztaly_bejegyzesek.html
@@ -7,6 +7,11 @@
     <title>Osztály bejegyzései</title>
 </head>
 <body>
-    
+    <main>
+        <header><h3>{{ osztaly }} eddigi bejegyzései</h3></header>
+        <article>
+            
+        </article>
+    </main>
 </body>
 </html>
