--- a/app/templates/app/bejegyzesek.html
+++ b/app/templates/app/bejegyzesek.html
@@ -31,8 +31,12 @@
                         <th>Státusz</th>
                     </tr>
                     {% for bejegyzes in bejegyzesek %}
-                    <tr>
-                            <td>{{ bejegyzes.osztaly_id }}</td>
+                        <tr>
+                            {% for key, value in osztalyok %}
+                                {% if key == bejegyzes.osztaly_id %}
+                                    <td>{{ value }}</td>
+                                {% endif %}
+                            {% endfor %}
                             <td>{{ bejegyzes.tevekenyseg_id }}</td>
                             <td>{{ bejegyzes.tevekenyseg_id.pontszam }}</td>
                             <td>{{ bejegyzes.allapot }}</td>
@@ -43,7 +47,6 @@
                 <p>Nincs adat</p>
             {% endif %}
         </article>
-        <footer></footer>
     </main>
 </body>
 </html>
