--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -23,26 +23,28 @@
         <article>
             <h4>Eddigi bejegyzések:</h4>
             {% if bejegyzesek %}
-                <table class="bejegyzes-table">
-                    <tr>
-                        <th>Osztály</th>
-                        <th>Tevékenység</th>
-                        <th>Pont</th>
-                        <th>Státusz</th>
-                    </tr>
-                    {% for bejegyzes in bejegyzesek %}
+                <div class="bejegyzes-table">
+                    <table>
                         <tr>
-                            {% for key, value in osztalyok %}
-                                {% if key == bejegyzes.osztaly_id %}
-                                    <td>{{ value }}</td>
-                                {% endif %}
-                            {% endfor %}
-                            <td>{{ bejegyzes.tevekenyseg_id }}</td>
-                            <td>{{ bejegyzes.tevekenyseg_id.pontszam }}</td>
-                            <td>{{ bejegyzes.allapot }}</td>
+                            <th>Osztály</th>
+                            <th>Tevékenység</th>
+                            <th>Pont</th>
+                            <th>Státusz</th>
                         </tr>
-                    {% endfor %}
-                </table>
+                        {% for bejegyzes in bejegyzesek %}
+                            <tr>
+                                {% for key, value in osztalyok %}
+                                    {% if key == bejegyzes.osztaly_id %}
+                                        <td>{{ value }}</td>
+                                    {% endif %}
+                                {% endfor %}
+                                <td>{{ bejegyzes.tevekenyseg_id }}</td>
+                                <td>{{ bejegyzes.tevekenyseg_id.pontszam }}</td>
+                                <td>{{ bejegyzes.allapot }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
             {% else %}
                 <p>Nincs adat</p>
             {% endif %}
