--- a/app/templates/app/osztaly_bejegyzesek.html
+++ b/app/templates/app/osztaly_bejegyzesek.html
@@ -10,7 +10,30 @@
     <main>
         <header><h3>{{ osztaly }} eddigi bejegyzései</h3></header>
         <article>
-            
+            <h4>Eddigi bejegyzések:</h4>
+            {% if bejegyzesek %}
+                <table class="bejegyzes-table">
+                    <tr>
+                        <th>Tevékenység</th>
+                        <th>Pont</th>
+                        <th>Státusz</th>
+                    </tr>
+                    {% for bejegyzes in bejegyzesek %}
+                        <tr>
+                            {% for key, value in osztalyok %}
+                                {% if key == bejegyzes.osztaly_id %}
+                                    <td>{{ value }}</td>
+                                {% endif %}
+                            {% endfor %}
+                            <td>{{ bejegyzes.tevekenyseg_id }}</td>
+                            <td>{{ bejegyzes.tevekenyseg_id.pontszam }}</td>
+                            <td>{{ bejegyzes.allapot }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            {% else %}
+                <p>Nincs adat</p>
+            {% endif %}
         </article>
     </main>
 </body>
